# rust-html-helpers

./: Cargo.toml  README.md
docs/for-llm/: doc-for-llm.md
examples/: c01-simple.rs
src/: elem.rs  error.rs  lib.rs  slimmer.rs
src/selector/: select.rs
src/slimmer/: mod.rs  slim.rs  support.rs
src/support/: mod.rs  rcdom.rs
