[package]
name = "html-helpers"
version = "0.0.7-WIP"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A collection of high-level utilities for cleaning, transforming, and converting HTML content."
keywords = ["html","DOM","parsing"]
homepage = "https://github.com/jeremychone/rust-html-helpers"
repository = "https://github.com/jeremychone/rust-html-helpers"

[lib]
doctest = false # Re-enable if following best practices

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- html5ever
html5ever = "0.31.0"
# Note: To maximize compatibility with other libraries
#       that use html5ever (with different versions),
#       the single markup5ever_rcdom file is copied into this crate.
# markup5ever_rcdom = "0.5.3-unofficial"
markup5ever = "0.16.1"
tendril = "0.4.3" # needed for custom rcdom
# -- Other html utils
html-escape = "0.2.13"
# -- Others
derive_more = {version = "2", features = ["from", "display"] }
