[package]
name = "html-helpers"
version = "0.1.1-WIP"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A collection of high-level utilities for cleaning, transforming, and converting HTML content."
keywords = ["html","DOM","parsing"]
homepage = "https://github.com/jeremychone/rust-html-helpers"
repository = "https://github.com/jeremychone/rust-html-helpers"

[lib]
doctest = false # Re-enable if following best practices

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Scraper
scraper = "0.24"
ego-tree = "0.10.0"
# -- Other html utils
html-escape = "0.2.13"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# -- Others
derive_more = {version = "2", features = ["from", "display"] }
